# infynon-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  agent.md  infynon.example.toml  install.ps1  install.sh
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: README.md  agent-control-plane.md  ai-agent-workflow.md  changelog.md  commands.md  configuration.md  contracts.md  gccd.md  install.md  installation.md  introduction.md  loom.md  ninja-coding.md  npm-install.md  overview.md  prompts.md  quick-start.md  scan.md  trace.md  verification.md  weave.md  windows-troubleshooting.md  workspaces.md
docs/commands/: coding.md  overview.md  pkg.md  task.md  trace.md  weave.md  workspace.md
docs/guides/: manage-ai-tasks.md  multi-agent-workflow.md  scan-project-dependencies.md  secure-package-install.md  test-api-flows.md  use-gccd-task-format.md
docs/reference/: config.md  environment-variables.md  exit-codes.md  generated-files.md  supported-package-managers.md
docs/troubleshooting/: agent-launch-issues.md  installation-issues.md  permission-errors.md  rate-limit-errors.md  windows-issues.md
go/: go.mod  main.go
go/cmd/infynon/: main.go
go/internal/installer/: installer.go
npm/: .npmignore  LICENSE  README.md  package.json  postinstall.js  preuninstall.js  run-pkg.js  run.js
scripts/: build-all.sh  install.ps1  install.sh  verify-release-versions.py
src/: main.rs  utils.rs
src/api/: ai.rs  assertions.rs  executor.rs  mod.rs  storage.rs  types.rs  variables.rs
src/api/commands/: ai_cmd.rs  attach.rs  env.rs  flow.rs  import.rs  mod.rs  node.rs  validate.rs
src/api/commands/flow/: create.rs  inspect.rs  manage.rs  run.rs
src/api/commands/node/: create.rs  inspect.rs  manage.rs  run.rs
src/api/storage/: flows.rs  nodes.rs  runs.rs  yaml_load.rs  yaml_save.rs
src/cli/: args.rs  commands.rs  mod.rs  scan.rs  validate.rs
src/cli/args/: actions_ai.rs  actions_api.rs  actions_assertion.rs  actions_env.rs  actions_flow.rs  actions_ninja.rs  actions_node.rs  actions_prompt.rs  actions_soul.rs  actions_task.rs  actions_workspace.rs  mod.rs  pkg.rs  root.rs  styles.rs  utils.rs
src/cli/commands/: api_mode.rs  mod.rs  passthrough.rs  prompt.rs  root_mode.rs  tui.rs  user_mode.rs
src/cli/features/: audit.rs  clean.rs  diff.rs  doctor.rs  eagle_eye.rs  explain.rs  fix.rs  migrate.rs  mod.rs  outdated.rs  search.rs  size.rs  why_cmd.rs
src/cli/features/eagle_eye/: commands.rs  config.rs  email.rs  html.rs  mod.rs  prompt.rs  scan.rs  secret.rs  setup.rs  tests.rs  types.rs
src/cli/features/search/: display.rs  http.rs  matching.rs  resolve.rs  signals.rs  signals_extra.rs  tests.rs  types.rs
src/cli/features/search/backends/: crates_io.rs  go.rs  hex.rs  mod.rs  npm.rs  nuget.rs  packagist.rs  pubdev.rs  pypi.rs  rubygems.rs
src/cli/features/shared/: deps.rs  http.rs  mod.rs  packages.rs  progress.rs
src/cli/scan/: agent.rs  autofix.rs  human.rs  install_gate.rs  mod.rs  report.rs  runner.rs  specs.rs  tests.rs  types.rs
src/config/: loader.rs  mod.rs  settings.rs
src/daemon/: aggregator.rs  mod.rs  updater.rs
src/ecosystems/: adapter.rs  cargo.rs  catalog.rs  detector.rs  mod.rs  npm.rs  pypi.rs
src/engine/: layer1_blocklist.rs  layer2_static.rs  layer3_llm.rs  mod.rs  osv.rs  pipeline.rs  registry.rs  reporter.rs  scanner.rs
src/engine/scanner/: javascript.rs  other.rs  python.rs
src/error/: types.rs
src/firewall/: config.rs  events.rs  ip_filter.rs  logger.rs  mailer.rs  mod.rs  pipeline.rs  rate_limiter.rs  rules.rs  server.rs  stats.rs  waf.rs
src/loom/: cli.rs  commands.rs  storage.rs  tui.rs  types.rs
src/loom/backend/: mod.rs  redis.rs
src/loom/backend/sql/: mod.rs  store.rs
src/models/: mod.rs  package.rs  verdict.rs
src/ninja/: agent-commands.json  commands.rs  mod.rs  onboarduser-prompt.md  storage.rs  systemprompt.md  task-start-systemprompt.md  tui.rs  types.rs
src/ninja/commands/: agent.rs  dispatch_soul.rs  helpers.rs  launch.rs  project_agent.rs  task.rs  workspace.rs
src/trace/: cli.rs  commands.rs  mod.rs  storage.rs  tui.rs  types.rs
src/trace/backend/: mod.rs  redis.rs
src/trace/backend/sql/: mod.rs  store.rs
src/trace/commands/: graph.rs  notes.rs  source.rs
src/trace/storage/: config.rs  graph.rs  notes.rs  packages.rs  schema.rs
src/trace/tui/: handlers_browse.rs  handlers_forms.rs  runtime.rs  views_core.rs  views_graph.rs  views_modal.rs
src/tui/: api_app.rs  api_views.rs  dashboard.rs  firewall_app.rs  loaders.rs  logger.rs  mod.rs  theme.rs  views.rs
src/tui/api_app/: app_state.rs  editors.rs  handlers.rs  mod.rs  runner.rs  types.rs
src/tui/api_views/: dashboard.rs  diff.rs  environment.rs  flows.rs  header.rs  mod.rs  modals.rs  nodes.rs  overlays.rs  runner.rs  sidebar.rs
src/tui/api_views/modals/: body.rs  detail.rs  json.rs  prompt.rs
(+4 files in other folders)
