[package]
name = "infynon"
version = "0.1.0-beta.1"
edition = "2021"
description = "Universal package security manager — intercepts installs across npm, pip, cargo, go, gem, composer, nuget, hex, pub with 3-layer CVE verification"
license = "MIT"
repository = "https://github.com/d4rkNinja/infynon-cli"
keywords = ["security", "package-manager", "vulnerability", "osv", "supply-chain"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
clap        = { version = "4.4", features = ["derive", "color", "help"] }
thiserror   = "1.0"
indicatif   = "0.17"
owo-colors  = "4.0"
tabled      = "0.15"
ratatui     = "0.26"
dialoguer   = "0.11"
reqwest     = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
printpdf    = "0.7"
