[package]
name = "infynon"
version = "0.2.0-beta.6.7"
edition = "2021"
description = "Universal package security manager & network firewall — intercepts installs across npm, pip, cargo, go, gem, composer, nuget, hex, pub with 3-layer CVE verification, plus a real-time reverse proxy WAF with TUI dashboard"
license = "MIT"
repository = "https://github.com/d4rkNinja/infynon-cli"
keywords = ["security", "package-manager", "vulnerability", "firewall", "waf"]
categories = ["command-line-utilities", "development-tools", "network-programming"]
readme = "README.md"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
clap        = { version = "4.4", features = ["derive", "color", "help"] }
thiserror   = "1.0"
indicatif   = "0.17"
owo-colors  = "4.0"
tabled      = "0.15"
ratatui     = { version = "0.26", features = ["crossterm"] }
crossterm   = "0.27"
dialoguer   = "0.11"
reqwest     = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip", "brotli", "deflate"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
printpdf    = "0.7"

# Firewall dependencies
tokio       = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "sync", "time", "fs"] }
hyper       = { version = "1", features = ["server", "http1"] }
hyper-util  = { version = "0.1", features = ["tokio", "server-auto", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes       = "1"
toml        = "0.8"
regex       = "1"
chrono      = { version = "0.4", features = ["serde"] }
ipnet       = "2"
lettre      = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "rustls-tls"] }
lru = "0.16.3"
