[package]
name = "infynon"
version = "0.2.0-beta.9.0.4"
edition = "2021"
authors = ["d4rkNinja"]
description = "Package intelligence, API flow testing, and shared coding memory for AI-assisted development"
license = "MIT"
repository = "https://github.com/d4rkNinja/infynon-cli"
homepage = "https://cli.infynon.com"
documentation = "https://cli.infynon.com/docs"
keywords = ["security", "package-manager", "vulnerability", "api-testing", "memory"]
categories = ["command-line-utilities", "development-tools", "network-programming"]
readme = "README.md"
exclude = [".github/", ".infynon/", "assets/", "npm/", "scripts/"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
clap        = { version = "4.4", features = ["derive", "color", "help"] }
thiserror   = "1.0"
indicatif   = "0.17"
owo-colors  = "4.0"
tabled      = "0.15"
ratatui     = { version = "0.26", features = ["crossterm"] }
crossterm   = "0.27"
dialoguer   = "0.11"
reqwest     = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip", "brotli", "deflate"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
printpdf    = "0.7"
redis       = "0.27"
postgres    = "0.19"
mysql       = "26.0"
rusqlite    = { version = "0.32", features = ["bundled"] }

# Firewall dependencies
tokio       = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "sync", "time", "fs"] }
hyper       = { version = "1", features = ["server", "http1"] }
hyper-util  = { version = "0.1", features = ["tokio", "server-auto", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes       = "1"
toml        = "0.8"
regex       = "1"
chrono      = { version = "0.4", features = ["serde"] }
ipnet       = "2"
lettre      = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "rustls-tls"] }
lru         = "0.16.3"
serde_yaml  = "0.9"
